jena-shex/src/test/files/spec/validation/skipped.shex
BASE <http://a.example.org/>
PREFIX : <http://a.example/>

<S> { ( :a .; :b . )?; :c . }
