jena-shex/src/test/files/spec/negativeStructure/Cycle1Negation1.shex
# Negated circular ref to :S.
PREFIX :       <http://example.org/>

:S NOT {
  :a {
    :b @:S
  }
}
